fix: localized film infos on reviews and feed
